--- a/404.html
+++ b/404.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Todo List</title>
-  <base href="/">
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.a88d86ed13a084d0759a.css"></head>
+<link rel="stylesheet" href="./styles.a88d86ed13a084d0759a.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.5bc68c0dd8cf137fbe82.js" type="module"></script><script src="polyfills-es2015.5cb1e996b2a376ba4548.js" type="module"></script><script src="runtime-es5.ee0aae13fb762b150814.js" nomodule defer></script><script src="polyfills-es5.38c6da221291b284e1c4.js" nomodule defer></script><script src="main-es2015.aa2d66235b5d7ceaeacd.js" type="module"></script><script src="main-es5.d61da870fa98f1737925.js" nomodule defer></script></body>
+<script src="./runtime-es2015.5bc68c0dd8cf137fbe82.js" type="module"></script>
+  <script src="./polyfills-es2015.5cb1e996b2a376ba4548.js" type="module"></script>
+  <script src="./runtime-es5.ee0aae13fb762b150814.js" nomodule defer></script>
+  <script src="./polyfills-es5.38c6da221291b284e1c4.js" nomodule defer></script>
+  <script src="./main-es2015.aa2d66235b5d7ceaeacd.js" type="module"></script>
+  <script src="./main-es5.d61da870fa98f1737925.js" nomodule defer></script></body>
 </html>
